# bg3-smart-dice-rolls

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-installer.yml
installer/: BG3SmartDiceRollsModInstaller.iss
installer/files/: launch-service.vbs  pixels.ini  smart-dice-rolls-mod.ini
src/: Config.cpp  Config.h  PixelsDiceClient.cpp  PixelsDiceClient.h  SmartDiceResult.h  SmartDiceRolls.cpp  SmartDiceRolls.h  dllmain.cpp
